# sdl3-sys-rs

./: .gitignore  .gitmodules  .mailmap  Cargo.toml  README.md  build-common.rs  generate-and-check.sh  update-branches.sh  update-dev-branches.sh  update-submodules.sh
.github/: README.md
.github/workflows/: lockdown.yml  rust.yml
content/shaders/compiled/dxil/: PullSpriteBatch.vert.dxil  RawTriangle.vert.dxil  SolidColor.frag.dxil  TexturedQuadColor.frag.dxil
content/shaders/compiled/json/: PullSpriteBatch.vert.json  RawTriangle.vert.json  SolidColor.frag.json  TexturedQuadColor.frag.json
content/shaders/compiled/msl/: PullSpriteBatch.vert.msl
content/shaders/compiled/spv/: PullSpriteBatch.vert.spv
examples/: common.rs
examples/content/shaders/: compile-shaders.sh
examples/content/shaders/compiled/json/: TexturedQuadColor.frag.json
examples/gpu-basic-triangle/: Cargo.toml
examples/gpu-basic-triangle/src/: main.rs
examples/gpu-clear-screen/: Cargo.toml
examples/gpu-clear-screen/src/: main.rs
examples/gpu-common/: Cargo.toml
examples/gpu-common/src/: lib.rs
examples/gpu-pull-sprite-batch/: Cargo.toml
examples/gpu-pull-sprite-batch/src/: common.rs  main.rs
sdl3-image-src/: Cargo.toml  README.md
sdl3-image-src/src/: lib.rs
sdl3-image-sys/: Cargo.toml  ChangeLog.md  README.md  build-common.rs  build.rs  config.txt
sdl3-image-sys/examples/: showimage.rs
sdl3-image-sys/src/: generated_metadata.rs  lib.rs  metadata.rs
sdl3-main/: Cargo.toml  ChangeLog.md  README.md  README.md.inc
sdl3-main-macros/: Cargo.toml  LICENSE.md  README.md
sdl3-main-macros/src/: lib.rs  parse.rs
sdl3-main/src/: app.rs  lib.rs  main_thread.rs  state.rs
sdl3-main/tests/: on_main_thread.rs
sdl3-mixer-src/: Cargo.toml  README.md
sdl3-mixer-src/src/: lib.rs
sdl3-mixer-sys/: Cargo.toml  ChangeLog.md  LICENSE.md  README.md  build.rs  config.txt
sdl3-mixer-sys/examples/: 01-load-and-play.rs  README.md
sdl3-mixer-sys/src/: lib.rs  metadata.rs
sdl3-net-src/: Cargo.toml  README.md
sdl3-net-src/src/: lib.rs
sdl3-net-sys/: Cargo.toml  ChangeLog.md  README.md  build-common.rs  build.rs  config.txt
sdl3-net-sys/src/: lib.rs  metadata.rs
sdl3-sound-src/: Cargo.toml  README.md
sdl3-sound-src/src/: lib.rs
sdl3-sound-sys/: Cargo.toml  ChangeLog.md  LICENSE.md  README.md  build.rs  config.txt
sdl3-sound-sys/examples/: playsound_simple.rs
sdl3-sound-sys/src/: lib.rs  metadata.rs
sdl3-src/: Cargo.toml  README.md  build.rs
sdl3-src/src/: lib.rs
sdl3-sys/: Cargo.toml  ChangeLog.md  LICENSE.md  README.md  build-common.rs  build.rs  config.txt
sdl3-sys-gen/: Cargo.toml  README.md
sdl3-sys-gen/src/: emit.rs  lib.rs  main.rs  parse.rs
sdl3-sys-gen/src/emit/: expr.rs  item.rs  patch.rs  state.rs
sdl3-sys-gen/src/parse/: attr.rs  decl.rs  doc_comment.rs  enum.rs  expr.rs  fn.rs  ident.rs  item.rs  keyword.rs  keywords.rs  literal.rs  op.rs  patch.rs  preproc.rs  primitive.rs  result.rs  span.rs  struct.rs  type.rs
sdl3-sys/examples/: common.rs  demo-01-snake.rs  game-01-snake.rs  gpu-basic-triangle.rs  gpu-clear-screen.rs  gpu_clear_screen.rs  minimal.rs
sdl3-sys/examples/content/shaders/compiled/dxil/: PullSpriteBatch.vert.dxil
sdl3-sys/src/: generated.rs  generated_metadata.rs  lib.rs  metadata.rs
sdl3-ttf-src/: Cargo.toml  README.md
sdl3-ttf-src/src/: lib.rs
sdl3-ttf-sys/: Cargo.toml  ChangeLog.md  README.md  build-common.rs  build.rs  config.txt
sdl3-ttf-sys/examples/: editbox.rs  showfont.rs
sdl3-ttf-sys/src/: generated_metadata.rs  lib.rs  metadata.rs
