[workspace]
resolver = "3"
members = [
    "sdl3-image-src",
    "sdl3-image-sys",
    "sdl3-main-macros",
    "sdl3-main",
    "sdl3-src",
    "sdl3-sys-gen",
    "sdl3-sys",
    "sdl3-ttf-src",
    "sdl3-ttf-sys",
    "examples/gpu-basic-triangle",
    "examples/gpu-clear-screen",
    "examples/gpu-pull-sprite-batch",
]
default-members = ["sdl3-sys", "sdl3-image-sys", "sdl3-ttf-sys", "sdl3-main"]
