[package]
name = "sdl3-main-macros"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
authors = ["Maia S Ravn <maia.noreply@runbox.com>"]
license = "Zlib"
description = "Proc macros for sdl3-main"
repository = "https://github.com/maia-s/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-main-macros"
keywords = ["sdl"]
categories = []

[lib]
proc-macro = true

[features]
default = []
std = []
