[package]
name = "sdl3-main-macros"
version = "0.1.1"
edition = "2021"
authors = ["Maia S Ravn <maia.noreply@runbox.com>"]
license = "Zlib"
description = "Proc macros for sdl3-main"
repository = "https://codeberg.org/maia/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-main-macros"
keywords = ["sdl"]
categories = []

[lib]
proc-macro = true

[features]
default = []
alloc = []
std = ["alloc"]
