[package]
name = "sdl3-main"
version = "0.1.1"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib"
description = "Tools for using SDL's main and callback APIs"
repository = "https://github.com/maia-s/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-main"
keywords = ["sdl"]
categories = []

[features]
default = ["std"]
alloc = ["sdl3-main-macros/alloc"]
std = ["alloc", "sdl3-main-macros/std"]

# for docs
nightly = []

[dependencies.sdl3-sys]
path = "../sdl3-sys"
version = "0.1"

[dependencies.sdl3-main-macros]
path = "../sdl3-main-macros"
version = "0.1.1"

[package.metadata.docs.rs]
all-features = true
