[package]
name = "sdl3-main"
version = "0.5.1"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib"
description = "Tools for using SDL's main and callback APIs"
repository = "https://github.com/maia-s/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-main"
keywords = ["sdl", "main", "callbacks", "game-loop", "event-loop"]
categories = ["api-bindings", "no-std", "rust-patterns"]

[features]
default = ["std"]
alloc = ["sdl3-main-macros/alloc"]
std = ["alloc", "sdl3-main-macros/std"]

nightly = []

use-parking-lot-v0-12 = ["dep:parking-lot-v0-12", "std"]

[[test]]
name = "on_main_thread"
path = "tests/on_main_thread.rs"
harness = false

[dev-dependencies]
libtest-mimic-collect = "0.3"

[dependencies.sdl3-sys]
path = "../sdl3-sys"
version = "0.5"

[dependencies.sdl3-main-macros]
path = "../sdl3-main-macros"
version = "0.1.1"

[dependencies.parking-lot-v0-12]
package = "parking_lot"
version = "0.12"
optional = true

[package.metadata.docs.rs]
all-features = true
