[package]
name = "sdl3-net-src"
version = "3.2.0"
edition = "2021"
authors = ["SDL developers"]
license = "Zlib"
description = "Source code of the SDL3_net library"
repository = "https://codeberg.org/maia/sdl3-sys-rs"
# documentation = "https://docs.rs/sdl3-net-src"
keywords = ["sdl"]
categories = ["no-std"]
