[package]
name = "sdl3-sound-src"
version = "3.2.0"
edition = "2021"
authors = ["Ryan C. Gordon <icculus@icculus.org> and others"]
license = "Zlib"
description = "Source code of the SDL3_sound library"
repository = "https://codeberg.org/maia/sdl3-sys-rs"
# documentation = "https://docs.rs/sdl3-sound-src"
keywords = ["sdl"]
categories = ["no-std"]
