[package]
name = "sdl3-src"
version = "3.1.6-preview-508-g2d91f096c"
edition = "2021"
authors = ["SDL developers"]
license = "Zlib"
description = "Source code of the SDL 3 library"
repository = "https://github.com/maia-s/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-src"
keywords = ["sdl"]
categories = ["no-std"]
