[package]
name = "sdl3-src"
version = "3.2.2-release-41-g6cb3d37a2"
edition = "2021"
authors = ["SDL developers"]
license = "Zlib"
description = "Source code of the SDL 3 library"
repository = "https://github.com/maia-s/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-src"
keywords = ["sdl"]
categories = ["no-std"]
exclude = ["SDL/examples", "SDL/test"]
