[package]
name = "sdl3-sys"
version = "0.0.11-dev+SDL-preview-3.1.3-197-g2654d5d48"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib"
description = "Rust bindings for version 3 of the SDL library (Simple DirectMedia Layer)"
repository = "https://github.com/maia-s/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-sys"
keywords = ["sdl", "windowing", "graphics"]
categories = ["external-ffi-bindings", "rendering", "game-development", "multimedia", "no-std"]
rust-version = "1.79"
links = "SDL3"

[features]
default = []

# Build and link SDL 3 from source instead of linking a pre-existing library
build-from-source = ["dep:cmake", "dep:rpkg-config", "dep:sdl3-src"]

# Build and link a static SDL library from source
build-from-source-static = ["build-from-source", "link-static"]

# Link SDL as a static library. The default is to link a shared/dynamic library.
link-static = []

# Link SDL as a mac framework. The link-static feature has no effect if this is enabled.
link-framework = []

# Use pkg-config to get link flags for SDL. Only used when not building from source.
# This has no effect if the link-framework feature is enabled.
use-pkg-config = ["dep:pkg-config"]

# Use vcpkg to get link flags for SDL. Only used when not building from source.
# The link-static feature has no effect when using vcpkg.
# This has no effect if the link-framework feature is enabled.
use-vcpkg = ["dep:vcpkg"]

# These are mutually exlusive; if more than one is enabled, the former in the list is used
# (so e.g. disabled overrides release). If none are selected, either release or debug will
# be enabled based on the build profile
assert-level-disabled = []
assert-level-release = []
assert-level-debug = []
assert-level-paranoid = []

# Implement the Debug trait for applicable types
debug-impls = []

# Enable nightly features
nightly = []

# Optional integrations
use-ash = ["dep:ash"]
use-libc = ["dep:libc"]
use-x11 = ["dep:x11"]
use-x11-dl = ["dep:x11-dl"]

[package.metadata.docs.rs]
all-features = true

[dependencies.ash]
version = "0.38"
default-features = false
optional = true

[dependencies.libc]
version = "0.2"
default-features = false
optional = true

[dependencies.x11]
version = "2.21"
optional = true

[dependencies.x11-dl]
version = "2.21"
optional = true

[build-dependencies.cmake]
version = "0.1"
optional = true

[build-dependencies.pkg-config]
version = "0.3"
optional = true

[build-dependencies.rpkg-config]
version = "0.1.1"
optional = true

[build-dependencies.sdl3-src]
version = "3.1.3-preview-197-g2654d5d48"
path = "../sdl3-src"
optional = true

[build-dependencies.vcpkg]
version = "0.2"
optional = true
