[package]
name = "sdl3-ttf-src"
version = "3.1.0-preview-0"
edition = "2021"
authors = ["SDL developers"]
license = "Zlib"
description = "Source code of the SDL3_ttf library"
repository = "https://github.com/maia-s/sdl3-sys-rs"
# documentation = "https://docs.rs/sdl3-ttf-src"
keywords = ["sdl"]
categories = ["no-std"]
exclude = [
    "/SDL_ttf/external/harfbuzz/test",
]
