[package]
name = "sdl3-ttf-sys"
version = "0.2.0+SDL3-ttf-3.2.2"
edition = "2021"
authors = ["Maia S Ravn <maia.noreply@runbox.com>"]
license = "Zlib"
description = "Low level Rust bindings for SDL3_ttf"
repository = "https://codeberg.org/maia/sdl3-sys-rs"
documentation = "https://docs.rs/sdl3-ttf-sys"
keywords = ["sdl", "ttf", "font"]
categories = ["external-ffi-bindings", "no-std"]
links = "SDL3_ttf"
autoexamples = false

[features]
default = []

# Build and link SDL3_ttf from source instead of linking a pre-existing library
build-from-source = ["dep:cmake", "dep:rpkg-config", "dep:sdl3-ttf-src"]

# Build and link a static SDL3_ttf library from source
build-from-source-static = ["build-from-source", "link-static"]

# Build and link a static SDL3_ttf library from source using vendored libraries
build-static-vendored = ["build-from-source-static", "sdlttf-vendored"]

# Link SDL3_ttf as a static library. The default is to link a shared/dynamic library.
link-static = []

# Link SDL3_ttf as an Apple framework. The link-static feature has no effect if this is enabled.
link-framework = []

# Don't link anything, and provide linking flags via Cargo metadata.
no-link = []

# Use pkg-config to get link flags for SDL3_ttf. Only used when not building from source.
# This has no effect if the link-framework feature is enabled.
use-pkg-config = ["dep:pkg-config"]

# Use vcpkg to get link flags for SDL3_ttf. Only used when not building from source.
# The link-static feature has no effect when using vcpkg.
# This has no effect if the link-framework feature is enabled.
use-vcpkg = ["dep:vcpkg"]

# Implement the Debug trait for applicable types
debug-impls = ["sdl3-sys/debug-impls"]

sdlttf-vendored = []
no-sdlttf-vendored = []

sdlttf-harfbuzz = []
sdlttf-plutosvg = []
no-sdlttf-harfbuzz = []
no-sdlttf-plutosvg = []

[dependencies]
sdl3-sys = { version = "0.5.0", path = "../sdl3-sys" }

[build-dependencies.cmake]
version = "0.1"
optional = true

[build-dependencies.pkg-config]
version = "0.3"
optional = true

[build-dependencies.rpkg-config]
version = "0.1.2"
optional = true

[build-dependencies.sdl3-ttf-src]
version = "3.2.2"
path = "../sdl3-ttf-src"
optional = true

[build-dependencies.vcpkg]
version = "0.2"
optional = true

[[example]]
name = "showfont"
