[package]
name = "gpu-clear-screen"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.sdl3-sys]
features = ["build-from-source-static"]
path = "../../sdl3-sys"

[dependencies.sdl3-main]
path = "../../sdl3-main"
