[package]
name = "sdl3-sys-gpu-pull-sprite-batch-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.sdl3-sys]
path = "../../sdl3-sys"
features = ["build-from-source-static"]

[dependencies.sdl3-main]
path = "../../sdl3-main"
